--- a/index.html
+++ b/index.html
@@ -261,6 +261,14 @@
       <input id="productPrice" type="number" step="0.01" placeholder="السعر (مثال: 3.00)">
       <input id="productQuantity" type="text" placeholder="الكمية (مثال: 60 شدة)">
       <input id="productImageUrl" type="text" placeholder="رابط صورة المنتج">
+      <!-- إضافة اختيار نوع المنتج -->
+      <div style="margin-top:8px; text-align:right;">
+        <label style="display:block;margin-bottom:6px;">نوع المنتج:</label>
+        <select id="productType" style="padding:8px;border-radius:6px;border:1px solid #ddd;max-width:220px;">
+          <option value="رصيد">رصيد</option>
+          <option value="ألعاب">ألعاب</option>
+        </select>
+      </div>
       <div style="margin-top:8px;">
         <button id="publishBtn">نشر المنتج</button>
         <button id="closeAdminBtn" style="background:#e74c3c; margin-right:8px;">إغلاق</button>
@@ -391,47 +399,106 @@
       };
     }
 
-    // هنا التعديل الأساسي: خصم الرصيد عند الطلب وإرجاعه عند الرفض
-    async function buyProduct(productId, price, productName, quantity) {
+    // تعديل: شراء المنتج الآن يدعم أنواع (رصيد / ألعاب) ويطلب الحقول المناسبة قبل إنشاء الطلب
+    async function buyProduct(productId, price, productName, quantity, productType) {
       try {
         if (!auth.currentUser) return alert("يرجى تسجيل الدخول للشراء.");
         const uid = auth.currentUser.uid;
         const userRef = doc(db, "users", uid);
         const userSnap = await getDoc(userRef);
-        const userData = userSnap.data();
-        const currentBalance = Number(userData.balance) || 0;
-        const priceVal = Number(price);
+        const userData = userSnap.data() || {};
 
-        // التحقق من الرصيد
-        if (currentBalance < priceVal) {
-          return alert("رصيدك غير كافي لإتمام الطلب.");
+        // استخدم الـ modal لعرض الفورم للبيانات الإضافية
+        const m = el("modal"), c = el("modalContent");
+        if (!m || !c) return alert("خطأ في الواجهة.");
+
+        m.style.display = "flex";
+        if (productType === "ألعاب") {
+          c.innerHTML = `
+            <h3>شراء: ${productName}</h3>
+            <input id="buy_account_name" type="text" placeholder="ادخل اسم الحساب">
+            <input id="buy_account_id" type="text" placeholder="ادخل ايدي الحساب">
+            <div style="display:flex;gap:8px;margin-top:12px;justify-content:center;">
+              <button id="confirmBuyBtn">تأكيد الطلب</button>
+              <button id="cancelBuyBtn" style="background:#ccc;color:#111;">إلغاء</button>
+            </div>
+          `;
+        } else {
+          c.innerHTML = `
+            <h3>شراء: ${productName}</h3>
+            <input id="buy_phone" type="text" placeholder="ادخل رقمك (10 أرقام)">
+            <div style="display:flex;gap:8px;margin-top:12px;justify-content:center;">
+              <button id="confirmBuyBtn">تأكيد الطلب</button>
+              <button id="cancelBuyBtn" style="background:#ccc;color:#111;">إلغاء</button>
+            </div>
+          `;
         }
 
-        // خصم الرصيد مباشرة
-        await updateDoc(userRef, { balance: currentBalance - priceVal });
+        document.getElementById("cancelBuyBtn").onclick = () => {
+          m.style.display = "none";
+          c.innerHTML = "";
+        };
 
-        // إنشاء الطلب وتخزين قيمة الخصم فيه
-        await addDoc(collection(db, "orders"), {
-          uid,
-          userName: userData.name || "",
-          userEmail: userData.email || "",
-          userCode: userData.code || "",
-          product: productName,
-          productId,
-          price: priceVal,
-          quantity,
-          status: "pending",
-          createdAt: new Date(),
-          deducted: priceVal // نضيف قيمة الرصيد المخصوم للطلب
-        });
+        document.getElementById("confirmBuyBtn").onclick = async () => {
+          // جلب القيم الإضافية والتحقق منها
+          const extra = {};
+          if (productType === "ألعاب") {
+            const accountName = (el("buy_account_name")||{}).value.trim();
+            const accountId = (el("buy_account_id")||{}).value.trim();
+            if (!accountName || !accountId) return alert("الرجاء إدخال اسم الحساب وآيدي الحساب.");
+            extra.accountName = accountName;
+            extra.accountId = accountId;
+          } else {
+            const phone = (el("buy_phone")||{}).value.trim();
+            if (!/^\d{10}$/.test(phone)) return alert("الرقم غير صحيح. يجب أن يتكون من 10 أرقام.");
+            extra.phone = phone;
+          }
 
-        alert("تم إرسال طلبك للمراجعة. يمكنك متابعة حالة طلبك من صفحة الطلبات.");
-        await loadUserOrders();
-        el('ordersPanel').style.display = "block";
-        el('userPanel').style.display = "none";
-        await loadUserData(uid, userData.email); // تحديث الرصيد المعروض
+          // التحقق من الرصيد ثم الخصم وإنشاء الطلب
+          const currentBalance = Number(userData.balance) || 0;
+          const priceVal = Number(price);
+          if (currentBalance < priceVal) {
+            alert("رصيدك غير كافي لإتمام الطلب.");
+            return;
+          }
+
+          try {
+            // خصم الرصيد مرة واحدة
+            await updateDoc(userRef, { balance: currentBalance - priceVal });
+
+            // إنشاء الطلب مع الحقول الإضافية
+            await addDoc(collection(db, "orders"), {
+              uid,
+              userName: userData.name || "",
+              userEmail: userData.email || "",
+              userCode: userData.code || "",
+              product: productName,
+              productId,
+              price: priceVal,
+              quantity,
+              status: "pending",
+              createdAt: new Date(),
+              deducted: priceVal,
+              type: productType,
+              ...extra
+            });
+
+            m.style.display = "none";
+            c.innerHTML = "";
+            alert("تم إرسال طلبك للمراجعة. يمكنك متابعة حالة طلبك من صفحة الطلبات.");
+            await loadUserOrders();
+            el('ordersPanel').style.display = "block";
+            el('userPanel').style.display = "none";
+            await loadUserData(uid, userData.email); // تحديث الرصيد المعروض
+          } catch (err) {
+            console.error("buyProduct error:", err);
+            alert("حدث خطأ أثناء إرسال الطلب.");
+          }
+        };
+
       } catch (err) {
-        alert("حدث خطأ أثناء إرسال الطلب.");
+        console.error("buyProduct outer error:", err);
+        alert("حدث خطأ أثناء معالجة الشراء.");
       }
     }
 
@@ -464,6 +531,17 @@
           statusClass = "status-rejected"; statusText = "تم رفض العملية";
           statusNote = `<span style="color:#e74c3c;">✖ تم رفض العملية${o.rejectReason ? " - سبب: "+o.rejectReason : ""}</span>`;
         }
+
+        // حقول إضافية حسب النوع
+        let extraHtml = "";
+        if (o.type === "ألعاب" || o.accountName || o.accountId) {
+          extraHtml += `<div class="order-info-item"><span class="icon">🎮</span> اسم الحساب: ${o.accountName || "-"}</div>`;
+          extraHtml += `<div class="order-info-item"><span class="icon">🆔</span> آيدي الحساب: ${o.accountId || "-"}</div>`;
+        }
+        if (o.type === "رصيد" || o.phone) {
+          extraHtml += `<div class="order-info-item"><span class="icon">📱</span> رقم: ${o.phone || "-"}</div>`;
+        }
+
         container.innerHTML += `
           <div class="order-card">
             <div class="order-number">طلب رقم: ${idx+1}</div>
@@ -476,6 +554,7 @@
               <div class="order-info-item"><span class="icon">📦</span> المنتج: ${o.product}</div>
               <div class="order-info-item"><span class="icon">💲</span> السعر: ${o.price} $</div>
               <div class="order-info-item"><span class="icon">🔢</span> الكمية: ${o.quantity}</div>
+              ${extraHtml}
             </div>
             <span class="status-badge ${statusClass}">${statusText}</span>
             <div class="order-status-note">${statusNote}</div>
@@ -503,6 +582,17 @@
         let statusClass = "status-pending", statusText = "قيد المراجعة";
         if (o.status === "approved") { statusClass = "status-approved"; statusText = "تمت العملية"; }
         if (o.status === "rejected") { statusClass = "status-rejected"; statusText = "مرفوض"; }
+
+        // حقول إضافية حسب النوع
+        let extraHtml = "";
+        if (o.type === "ألعاب" || o.accountName || o.accountId) {
+          extraHtml += `<div class="order-info-item"><span class="icon">🎮</span> اسم الحساب: ${o.accountName || "-"}</div>`;
+          extraHtml += `<div class="order-info-item"><span class="icon">🆔</span> آيدي الحساب: ${o.accountId || "-"}</div>`;
+        }
+        if (o.type === "رصيد" || o.phone) {
+          extraHtml += `<div class="order-info-item"><span class="icon">📱</span> رقم: ${o.phone || "-"}</div>`;
+        }
+
         container.innerHTML += `
           <div class="order-card">
             <div class="order-number">طلب رقم: ${o.id}</div>
@@ -515,6 +605,7 @@
               <div class="order-info-item"><span class="icon">📦</span> المنتج: ${o.product}</div>
               <div class="order-info-item"><span class="icon">💲</span> السعر: ${o.price} $</div>
               <div class="order-info-item"><span class="icon">🔢</span> الكمية: ${o.quantity}</div>
+              ${extraHtml}
             </div>
             <span class="status-badge ${statusClass}">${statusText}</span>
             ${o.status === "pending" ? `
@@ -531,15 +622,13 @@
       const orderRef = doc(db, "orders", orderId);
       const orderSnap = await getDoc(orderRef);
       if (!orderSnap.exists()) return alert('الطلب غير موجود!');
-      const order = orderSnap.data();
-
       // لا حاجة لخصم الرصيد هنا لأنه تم الخصم عند الإنشاء
       await updateDoc(orderRef, { status: "approved" });
       await loadAdminOrders();
       await loadUserOrders();
     }
 
-    // هنا التعديل الأساسي الثاني: إعادة الرصيد عند الرفض
+    // إعادة الرصيد عند الرفض (موجود مسبقاً) مع الاحتفاظ بالمعلومات الإضافية
     window.rejectOrderPrompt = async function(orderId) {
       const reason = prompt("سبب الرفض:");
       const orderRef = doc(db, "orders", orderId);
@@ -675,16 +764,19 @@
           const displayName = data.name || "منتج";
           const displayPrice = (typeof data.price !== "undefined") ? Number(data.price).toFixed(2) : "0.00";
           const displayQuantity = data.quantity || "-";
+          const displayType = data.type || "رصيد";
           card.innerHTML = `
             <img src="${img}" alt="${displayName}" onerror="this.src='https://i.imgur.com/placeholder.png'">
             <h4 style="margin:8px 0 4px 0;">${displayName}</h4>
             <p style="margin:0;">السعر: ${displayPrice}$</p>
-            <p style="margin:0 0 10px 0;">الكمية: ${displayQuantity}</p>
+            <p style="margin:0 0 6px 0;">الكمية: ${displayQuantity}</p>
+            <p style="margin:0 0 8px 0;font-size:13px;color:#666;">النوع: <strong>${displayType}</strong></p>
             <button class="buyBtn"
                     data-id="${docSnap.id}"
                     data-price="${displayPrice}"
                     data-name="${displayName}"
                     data-quantity="${displayQuantity}"
+                    data-type="${displayType}"
                     style="padding:8px 12px; border-radius:20px; border:none; background:#6c5ce7; color:white; cursor:pointer;">
               شراء
             </button>
@@ -696,7 +788,8 @@
               const price = parseFloat(btn.dataset.price || "0");
               const pname = btn.dataset.name || "";
               const qty = btn.dataset.quantity || "";
-              await buyProduct(docSnap.id, price, pname, qty);
+              const ptype = btn.dataset.type || "رصيد";
+              await buyProduct(docSnap.id, price, pname, qty, ptype);
             });
           }
         });
@@ -714,6 +807,7 @@
         const priceRaw = (el("productPrice")||{}).value || "";
         const quantity = ((el("productQuantity")||{}).value || "").trim();
         const imageUrl = ((el("productImageUrl")||{}).value || "").trim();
+        const type = ((el("productType")||{}).value || "رصيد");
 
         if (!name || priceRaw === "" || !quantity || !imageUrl) {
           return alert("أدخل جميع الحقول: الاسم، السعر، الكمية، الصورة.");
@@ -726,6 +820,7 @@
           price,
           quantity,
           image: imageUrl,
+          type, // حفظ نوع المنتج
           createdAt: new Date()
         });
 
@@ -734,6 +829,7 @@
         if (el("productPrice")) el("productPrice").value = "";
         if (el("productQuantity")) el("productQuantity").value = "";
         if (el("productImageUrl")) el("productImageUrl").value = "";
+        if (el("productType")) el("productType").value = "رصيد";
         await loadProducts();
       } catch (err) {
         console.error("publishProduct error:", err);
