--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </div>
     <hr style="margin:12px 0;">
     <ul style="padding:0;list-style:none;">
-      <li style="margin:8px 0;"><a href="#" id="sideHome">حوالات ماليه</a></li>
+      <li style="margin:8px 0;"><a href="https://xtx3.github.io/X1234/" id="sideHome">حوالات ماليه</a></li>
       <li style="margin:8px 0;"><a href="#" id="sideProducts">المنتجات</a></li>
       <li style="margin:8px 0;"><a href="#" id="sideOrders">الطلبات</a></li>
       <li style="margin:8px 0;"><a href="#" id="sideSettings">الإعدادات</a></li>
@@ -964,5 +964,6 @@
   </script>
 </body>
 </html>
+
 
 
