--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+ <meta property="og:title" content="متجر الكتروني">
+<meta property="og:description" content="شحن جميع الارصده">
+<meta property="og:image" content="https://a.top4top.io/p_3547wy24w1.jpg">
+<meta property="og:url" content="https://example.com">
+<meta property="og:type" content="website">
+
+<!-- دعم تويتر -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="متجر الكتروني">
+<meta name="twitter:description" content="شحن جميع الارصده">
+<meta name="twitter:image" content="https://a.top4top.io/p_3547wy24w1.jpg">
   <title>متجر العملات الافتراضية</title>
   <style>
     :root{ --accent:#6c5ce7; --accent-dark:#5a4dcf; --good:#27ae60; --muted:#888; }
@@ -166,7 +177,7 @@
 </head>
 <body>
 
-  <h1 style="text-align:center;">متجر العملات الافتراضية</h1>
+  <h1 style="text-align:center;">متجرك الخاص</h1>
   <div id="sideMenuOverlay"></div>
   <div id="topBar" aria-hidden="true">
     <div style="display:flex;align-items:center;gap:12px;">
@@ -964,6 +975,7 @@
   </script>
 </body>
 </html>
+
 
 
 
