--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
  <meta property="og:title" content="متجر الكتروني">
 <meta property="og:description" content="شحن جميع الارصده">
-<meta property="og:image" content="https://a.top4top.io/p_3547wy24w1.jpg">
+<meta property="og:image" content="https://a.top4top.io/p_3547bxm4d1.png">
 <meta property="og:url" content="https://example.com">
 <meta property="og:type" content="website">
 
@@ -13,7 +13,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="متجر الكتروني">
 <meta name="twitter:description" content="شحن جميع الارصده">
-<meta name="twitter:image" content="https://a.top4top.io/p_3547wy24w1.jpg">
+<meta name="twitter:image" content="https://a.top4top.io/p_3547bxm4d1.png">
   <title>متجر العملات الافتراضية</title>
   <style>
     :root{ --accent:#6c5ce7; --accent-dark:#5a4dcf; --good:#27ae60; --muted:#888; }
@@ -975,6 +975,7 @@
   </script>
 </body>
 </html>
+
 
 
 
