--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
- <meta property="og:title" content="متجر الكتروني">
-<meta property="og:description" content="شحن جميع الارصده">
-<meta property="og:image" content="https://a.top4top.io/p_3547bxm4d1.png">
-<meta property="og:url" content="https://example.com">
-<meta property="og:type" content="website">
+  <meta property="og:title" content="متجر الكترروني خاص بخدمات الانترنت">
+  <meta property="og:description" content="+994401888888 ثم قم بعمل اميل وكلمة مرور خاصه بك احتفض بهم لتسطتيع تسجيل الدخول مره اخره  لشحن رصيد ع الموقع او ايت استفسار تواصع ع  الرقم التالي   vpnاهلا بكم طريقة تسجيل الدخول الي الموقع  فعل تطبيق .">
+  <meta property="og:image" content="https://a.top4top.io/p_3547hxw7g1.jpg">
+  <meta property="og:url" content="https://xtx3.github.io/x123/">
+  <meta property="og:type" content="website">
 
-<!-- دعم تويتر -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="متجر الكتروني">
-<meta name="twitter:description" content="شحن جميع الارصده">
-<meta name="twitter:image" content="https://a.top4top.io/p_3547bxm4d1.png">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="متجر الكترروني خاص بخدمات الانترنت">
+  <meta name="twitter:description" content="+994401888888 ثم قم بعمل اميل وكلمة مرور خاصه بك احتفض بهم لتسطتيع تسجيل الدخول مره اخره  لشحن رصيد ع الموقع او ايت استفسار تواصع ع  الرقم التالي   vpnاهلا بكم طريقة تسجيل الدخول الي الموقع  فعل تطبيق ">
+  <meta name="twitter:image" content="https://a.top4top.io/p_3547hxw7g1.jpg">
   <title>متجر العملات الافتراضية</title>
   <style>
     :root{ --accent:#6c5ce7; --accent-dark:#5a4dcf; --good:#27ae60; --muted:#888; }
@@ -975,6 +975,7 @@
   </script>
 </body>
 </html>
+
 
 
 
