--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
  <!-- صورة مصغّرة عند مشاركة الموقع -->
 <meta property="og:title" content="متجر الكترروني خاص بخدمات الانترنت وشحن الارصده"> 
-<meta property="og:description" content="+994401888888 ثم قم بعمل اميل وكلمة مرور خاصه بك احتفض بهم لتسطتيع تسجيل الدخول مره اخره  لشحن رصيد ع الموقع او ايت استفسار تواصع ع  الرقم التالي   vpnاهلا بكم طريقة تسجيل الدخول الي الموقع  فعل تطبيق">
+<meta property="og:description" content="+994401888888 اهلا وسهلا بكم  في موقعنا المتواضع قم بتفعيل في بي ان لتسجيل الدخول الي موقعنا متواجد شحن جميع التطبيقات والارصده لشحن موقعك الخاص او الستفسار تواصل ع واتساب ">
 <meta property="og:image" content="https://a.top4top.io/p_3547wy24w1.jpg">
 <meta property="og:url" content="https://example.com">
 <meta property="og:type" content="website">
@@ -977,6 +977,7 @@
   </script>
 </body>
 </html>
+
 
 
 
