--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 </head>
 <body>
 
-  <h1 style="text-align:center;">متجرك الخاص</h1>
+  <h1 style="text-align:center;"></h1>
   <div id="sideMenuOverlay"></div>
   <div id="topBar" aria-hidden="true">
     <div style="display:flex;align-items:center;gap:12px;">
@@ -977,6 +977,7 @@
   </script>
 </body>
 </html>
+
 
 
 
