--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <meta name="google-site-verification" content="bsz625Fk5LhSKZGojTuJJJlIHvAT9ZvfBSmM2akWRZw" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
  <!-- صورة مصغّرة عند مشاركة الموقع -->
@@ -977,6 +978,7 @@
   </script>
 </body>
 </html>
+
 
 
 
