--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
 <meta name="twitter:description" content="+994401888888 ثم قم بعمل اميل وكلمة مرور خاصه بك احتفض بهم لتسطتيع تسجيل الدخول مره اخره  لشحن رصيد ع الموقع او ايت استفسار تواصع ع  الرقم التالي   vpnاهلا بكم طريقة تسجيل الدخول الي الموقع  فعل تطبيق">
 <meta name="twitter:image" content="https://a.top4top.io/p_3547wy24w1.jpg">
 
-  <title> متجر XIX </title>
+<head>
+  <title>متجر يوسف | متجر XIX | متجر الكتروني | متجر العاب وتطبيقات</title>
+  
+  <meta name="description" content="متجر يوسف - متجر XIX - متجر الكتروني لبيع و شحن الألعاب والتطبيقات. خدمات شحن ببجي، فري فاير، MTN، سوريـتيل بأفضل الأسعار.">
+  
+  <meta name="keywords" content="متجر يوسف, متجر قياده, متجر XIX, متجر الكتروني, متجر العاب, متجر تطبيقات, شحن العاب, شحن تطبيقات, شحن ببجي, شحن فري فاير, سريتيل, ام تي ان">
+  
+  <!-- تحسين لمحركات البحث -->
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="متجر يوسف">
+</head>
+
   <style>
     :root{ --accent:#6c5ce7; --accent-dark:#5a4dcf; --good:#27ae60; --muted:#888; }
     body { font-family: "Cairo", Arial, sans-serif; background:#f0f2f5; margin:0; padding:16px; direction:rtl; }
@@ -978,6 +989,7 @@
   </script>
 </body>
 </html>
+
 
 
 
