--- a/index.html
+++ b/index.html
@@ -17,16 +17,37 @@
 <meta name="twitter:description" content="+994401888888 ثم قم بعمل اميل وكلمة مرور خاصه بك احتفض بهم لتسطتيع تسجيل الدخول مره اخره  لشحن رصيد ع الموقع او ايت استفسار تواصع ع  الرقم التالي   vpnاهلا بكم طريقة تسجيل الدخول الي الموقع  فعل تطبيق">
 <meta name="twitter:image" content="https://a.top4top.io/p_3547wy24w1.jpg">
 
-<head>
-  <title>متجر يوسف | متجر XIX | متجر الكتروني | متجر العاب وتطبيقات</title>
-  
-  <meta name="description" content="متجر يوسف - متجر XIX - متجر الكتروني لبيع و شحن الألعاب والتطبيقات. خدمات شحن ببجي، فري فاير، MTN، سوريـتيل بأفضل الأسعار.">
-  
+
+  <title> متجر XIX |متجر يوسف |متجر قياده | متجر العاب |سريتيل|ام تي ان </title>
+
+  <!-- الوصف -->
+  <meta name="description" content="متجر يوسف يقدم جميع أنواع شحن التطبيقات والخطوط والألعاب. طريقة الدخول: شغّل VPN، أضف البريد الإلكتروني وكلمة المرور، ثم اضغط تسجيل. للتواصل وشحن الرصيد: واتساب +994401888888">
+
+  <!-- الكلمات المفتاحية -->
   <meta name="keywords" content="متجر يوسف, متجر قياده, متجر XIX, متجر الكتروني, متجر العاب, متجر تطبيقات, شحن العاب, شحن تطبيقات, شحن ببجي, شحن فري فاير, سريتيل, ام تي ان">
-  
-  <!-- تحسين لمحركات البحث -->
+
+  <!-- تعليمات لمحركات البحث -->
   <meta name="robots" content="index, follow">
   <meta name="author" content="متجر يوسف">
+
+  <!-- Open Graph (لظهور الصورة عند المشاركة) -->
+  <meta property="og:title" content="متجر يوسف | متجر XIX">
+  <meta property="og:description" content="متجر يوسف يقدم جميع أنواع شحن التطبيقات والخطوط والألعاب.">
+  <meta property="og:image" content="https://b.top4top.io/p_355498myo1.jpg">
+  <meta property="og:url" content="https://xtx3.github.io/x123/">
+  <meta property="og:type" content="website">
+
+  <!-- Structured Data (Schema.org) لتحسين ظهور الصورة والوصف في Google -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "متجر يوسف | متجر XIX",
+    "url": "https://xtx3.github.io/x123/",
+    "image": "https://b.top4top.io/p_355498myo1.jpg",
+    "description": "متجر يوسف يقدم جميع أنواع شحن التطبيقات والخطوط والألعاب."
+  }
+  </script>
 </head>
 
   <style>
@@ -989,6 +1010,7 @@
   </script>
 </body>
 </html>
+
 
 
 
