--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 <meta name="twitter:image" content="https://a.top4top.io/p_3547wy24w1.jpg">
 
 
-  <title> متجر XIX |متجر يوسف |متجر قياده | متجر العاب |سريتيل|ام تي ان </title>
+<link rel="icon" href="https://d.top4top.io/p_35542p6un1.jpg"> 
+  <title> متجر XIX,متجر قياده</title>
+  <meta hame="description" content="كل ما  html css js يخص تربيت النحل والبرمجه " />
+<meta name="google-site-verification" content="imSnWzbUrQlVqsI_Yxk4i2Buh_yyjBnwsDtFC2EXjGc" />
+  <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
 
   <!-- الوصف -->
   <meta name="description" content="متجر يوسف يقدم جميع أنواع شحن التطبيقات والخطوط والألعاب. طريقة الدخول: شغّل VPN، أضف البريد الإلكتروني وكلمة المرور، ثم اضغط تسجيل. للتواصل وشحن الرصيد: واتساب +994401888888">
@@ -1010,6 +1014,7 @@
   </script>
 </body>
 </html>
+
 
 
 
