--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 <link rel="icon" href="https://d.top4top.io/p_35542p6un1.jpg"> 
-  <title> متجر XIX,متجر قياده</title>
+  <title> متجر ارصدا</title>
   <meta hame="description" content="كل ما  html css js يخص تربيت النحل والبرمجه " />
 <meta name="google-site-verification" content="imSnWzbUrQlVqsI_Yxk4i2Buh_yyjBnwsDtFC2EXjGc" />
   <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
@@ -1014,6 +1014,7 @@
   </script>
 </body>
 </html>
+
 
 
 
