--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 <link rel="icon" href="https://d.top4top.io/p_35542p6un1.jpg"> 
-  <title> متجر ارصدا</title>
+  <title> متجر يوسف عبد الملك</title>
   <meta hame="description" content="كل ما  html css js يخص تربيت النحل والبرمجه " />
 <meta name="google-site-verification" content="imSnWzbUrQlVqsI_Yxk4i2Buh_yyjBnwsDtFC2EXjGc" />
   <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
@@ -42,7 +42,7 @@
   <meta property="og:type" content="website">
 
   <!-- Structured Data (Schema.org) لتحسين ظهور الصورة والوصف في Google -->
-  <script type="application/ld+json">
+  <script type="https://d.top4top.io/p_35542p6un1.jpg">
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
@@ -1126,5 +1126,6 @@ document.querySelectorAll('#sideMenu ul li a').forEach(link => {
   </script>
 </body>
 </html>
+
 
 
