--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       <li style="margin:8px 0;"><a href="https://xtx3.github.io/X1234/" id="sideHome">حوالات ماليه</a></li>
       <li style="margin:8px 0;"><a href="#" id="sideProducts">المنتجات</a></li>
       <li style="margin:8px 0;"><a href="#" id="sideOrders">الطلبات</a></li>
-      <li style="margin:8px 0;"><a href="#" id="sideSettings">الإعدادات</a></li>
+      <li style="margin:8px 0;"><a href="https://xtx3.github.io/123456x/" id="sideSettings">تواصل معنا</a></li>
       <li style="margin:8px 0;"><a href="#" id="sideLogout" onclick="logout()">تسجيل الخروج</a></li>
       <li style="margin:8px 0;"><a href="#" id="adminBtn" style="display:none;" onclick="openAdminPanel()">لوحة المسؤول</a></li>
       <li style="margin:8px 0;"><a href="#" id="adminOrdersBtn" style="display:none;">طلبات الأعضاء</a></li>
@@ -1126,6 +1126,7 @@ document.querySelectorAll('#sideMenu ul li a').forEach(link => {
   </script>
 </body>
 </html>
+
 
 
 
