--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
   <meta name="google-site-verification" content="bsz625Fk5LhSKZGojTuJJJlIHvAT9ZvfBSmM2akWRZw" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
- <!-- صورة مصغّرة عند مشاركة الموقع -->
-<meta property="og:title" content="متجر الكترروني خاص بخدمات الانترنت وشحن الارصده"> 
-<meta property="og:description" content="+994401888888 اهلا وسهلا بكم  في موقعنا المتواضع قم بتفعيل في بي ان لتسجيل الدخول الي موقعنا متواجد شحن جميع التطبيقات والارصده لشحن موقعك الخاص او الستفسار تواصل ع واتساب ">
+<!-- ✅ معلومات المعاينة العامة -->
+<meta property="og:title" content="متجر الكتروني خاص بخدمات الانترنت وشحن الارصده">
+<meta property="og:description" content="+994401888888 اهلا وسهلا بكم في موقعنا المتواضع. قم بتفعيل VPN لتسجيل الدخول. شحن جميع التطبيقات والأرصدة والاستفسار عبر واتساب.">
 <meta property="og:image" content="https://a.top4top.io/p_3547wy24w1.jpg">
-<meta property="og:url" content="https://example.com">
+<meta property="og:url" content="https://xtx3.github.io/x123/">
 <meta property="og:type" content="website">
+
+<!-- ✅ مهم جداً لتظهر الصورة كاملة في فيسبوك + واتساب + تيليجرام -->
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<!-- ✅ معاينة تويتر (X) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="متجر الكتروني - شحن أرصدة وخدمات">
+<meta name="twitter:description" content="للتفعيل والاستفسار تواصل عبر واتساب">
+<meta name="twitter:image" content="https://a.top4top.io/p_3547wy24w1.jpg">
+
+<!-- ✅ معاينة تيليجرام -->
+<link rel="image_src" href="https://a.top4top.io/p_3547wy24w1.jpg">
+
+<!-- ✅ أيقونة عند حفظ الموقع على الهاتف -->
+<link rel="apple-touch-icon" href="https://a.top4top.io/p_3547wy24w1.jpg">
+<link rel="shortcut icon" href="https://a.top4top.io/p_3547wy24w1.jpg" type="image/png">
+
 
 <!-- دعم تويتر -->
 <meta name="twitter:card" content="summary_large_image">
@@ -1126,6 +1144,7 @@ document.querySelectorAll('#sideMenu ul li a').forEach(link => {
   </script>
 </body>
 </html>
+
 
 
 
