--- a/index.html
+++ b/index.html
@@ -974,6 +974,10 @@ button.accent:hover {
               <div class="order-info-item"><span class="icon">💲</span> السعر: ${o.price} $</div>
               <div class="order-info-item"><span class="icon">🔢</span> الكمية: ${o.quantity}</div>
               ${extraHtml}
+              <div class="order-info-item">
+  <span class="icon">📅</span>
+  التاريخ: ${o.createdAt?.seconds ? new Date(o.createdAt.seconds * 1000).toLocaleString("ar-EG") : "غير متوفر"}
+</div>
             </div>
             <span class="status-badge ${statusClass}">${statusText}</span>
             ${o.status === "pending" ? `
@@ -1405,4 +1409,5 @@ document.addEventListener("DOMContentLoaded", () => {
   </script>
 </body>
 </html>
+
 
