--- a/index.html
+++ b/index.html
@@ -647,18 +647,54 @@ button.accent:hover {
  
 
 
+<!-- ====== FCM (Firebase Messaging) ====== -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-messaging-compat.js"></script>
 
+<script>
+  const firebaseConfigFCM = {
+    apiKey: "AIzaSyDPcyxpHRuLx9T2CO4LJ-n9jaqAynUjvqw",
+    authDomain: "xix5-a119a.firebaseapp.com",
+    projectId: "xix5-a119a",
+    messagingSenderId: "332265425367",
+    appId: "1:332265425367:web:0a95e71d8bd0058503a392"
+  };
 
-    
-    const firebaseConfig = {
-      apiKey: "AIzaSyDPcyxpHRuLx9T2CO4LJ-n9jaqAynUjvqw",
-      authDomain: "xix5-a119a.firebaseapp.com",
-      projectId: "xix5-a119a",
-      storageBucket: "xix5-a119a.appspot.com",
-      messagingSenderId: "332265425367",
-      appId: "1:332265425367:web:0a95e71d8bd0058503a392",
-      measurementId: "G-RLK4PXMV7P"
-    };
+  // تشغيل FCM
+  firebase.initializeApp(firebaseConfigFCM);
+  const messaging = firebase.messaging();
+
+  // تسجيل Service Worker
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("/firebase-messaging-sw.js");
+  }
+
+  // طلب الإذن للإشعارات وحفظ التوكن
+  async function requestNotificationPermission(uid) {
+    try {
+      const token = await messaging.getToken();
+      if (!token) return;
+
+      await firebase.firestore()
+        .collection("tokens")
+        .doc(uid)
+        .set({ token: token, uid: uid, date: Date.now() });
+
+    } catch (e) {
+      console.log("FCM Error:", e);
+    }
+  }
+
+  // استقبال إشعار داخل الموقع
+  messaging.onMessage((payload) => {
+    new Notification(payload.notification.title, {
+      body: payload.notification.body,
+      icon: "/icon.png"
+    });
+  });
+
+<!-- ====== END FCM ====== -->
+
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
@@ -1416,6 +1452,7 @@ document.addEventListener("DOMContentLoaded", () => {
   </script>
 </body>
 </html>
+
 
 
 
